<resources>
    <string name="app_name">Expense Tracker</string>
    <string name="enter_expense_title">Enter Expense Title</string>
    <string name="todo">TODO</string>
    <string name="save">Save</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="select_date">Select Date</string>
    <string name="cancel">Cancel</string>
    <string name="title">Title</string>
    <string name="category">Category</string>
    <string name="amount">Amount</string>


    <array name="category">
        <item name="dinner">Dinner</item>
        <item name="travel">Travel</item>
        <item name="work">Work</item>
    </array>
</resources>